<resources>
    <string name="app_name">Alexandria</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="book_downloader_service_description">Search books from the internet</string>
    <string name="file_conversion_service_description">Convert files to different formats</string>
    <string name="download_receiver_description">Listen to download completions</string>
    <string name="loading_results">Cargando resultados…</string>
    <string name="descargar">Descargar</string>
    <string name="cover">Cover</string>
    <string name="pdf">PDF</string>
    <string name="epub">EPUB</string>
    <string name="azw3">AZW3</string>
    <string name="home_greeting">
        ¡Wow, qué vacío!\n\n
        Utiliza la barra de búsqueda para empezar a buscar libros.
    </string>
    <string name="server_error">
        Hubo un error al contactar el servidor. Por favor, intentálo de nuevo luego.
    </string>
    <string name="search_menu_item">Buscar</string>
    <string name="convert_menu_item">Convertir</string>
    <string name="search_books_toolbar_title">Buscar libros</string>
    <string name="convert_books_toolbar_title">Convertir libros</string>
    <string name="choose_a_file">Escoge un archivo</string>
    <string name="choose_a_file_to_convert">Libro</string>
    <string name="mobi">MOBI</string>
    <string name="conversion_format">¿A qué formato quieres convertirlo?</string>
    <string name="convert">Convertir</string>
    <string name="filtros">Filtrar por</string>
    <string name="conversion_error">
        Hubo un error al convertir el archivo. Por favor, intentálo de nuevo más tarde.
    </string>
    <string name="archivo_cargado">Cargado: %s</string>
    <string name="logo">logo</string>
    <string name="about">Acerca</string>
    <string name="mas">Más</string>
    <string name="version">Version 0.3.2</string>
    <string name="download_completed">Descarga completada: %s</string>
    <string name="starting_download">Iniciando descarga de: %s</string>
    <string name="conversion_complete">Conversión completada.</string>
    <string name="file_loaded">Archivo cargado: %s</string>
    <string name="file_already_in_format">El archivo ya está en el formato seleccionado.</string>
    <string name="starting_conversion">Iniciando conversión.</string>
    <string name="file_size_exceeded">El archivo no puede superar los 10MB</string>
    <string name="there_was_an_error_converting_book">Hubo un error al convertir el libro</string>
    <string name="limit_reached">Sólo puedes convertir dos libros por minuto</string>
    <string name="notification_rationale">La aplicación necesita enviar notificaciones de descarga y conversiones</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="download_book_rationale">Se necesita permiso para descargar los libros</string>
    <string name="search_service_title">Buscando %s</string>
    <string name="search_service_content">Búsqueda en progreso</string>
    <string name="from_conversion_format">Convertir desde</string>
    <string name="to_conversion_format">Convertir a</string>
    <string name="support_kofi">Cómprame una cola en https://ko-fi.com/aloussase</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="kofi">Ko-fi</string>
    <string name="action_filter">Filter</string>
    <string name="empty_contents">El archivo esta vacío</string>
    <string name="empty_filename">El nombre del archivo no es válido</string>
    <string name="already_in_right_format">El libro ya se encuentra en ese formato</string>
    <string name="settings">Configuración</string>
    <string name="language">Lenguaje</string>
    <string name="fallback_language_not_found">Language code: %s not found. Falling back to English as default language.</string>
</resources>