<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_a_file_to_convert"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChooseFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnChooseFile"
        style="@style/AppButtonStyle"
        android:text="@string/choose_a_file"
        app:layout_constraintBottom_toTopOf="@+id/tvConversionFormat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseFile"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvConversionFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion_format"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseFile"
        tools:text="Cargado: The way of kings.pdf" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbPdf"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseFile">

        <RadioButton
            android:id="@+id/rbPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pdf" />

        <RadioButton
            android:id="@+id/rbEpub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/epub" />

        <RadioButton
            android:id="@+id/rbAzw3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:text="@string/azw3" />

        <RadioButton
            android:id="@+id/rbMobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobi" />

    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        style="@style/AppButtonStyle"
        android:enabled="false"
        android:text="@string/convert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>